resolved SyntaxError: Unexpected token }

--- a/public/contact.html
+++ b/public/contact.html
@@ -222,10 +222,10 @@
             // }
             //frm.submit(); // Submit the form
             //frm.reset();  // Reset all form data
-            alert("bob");
+            //alert("bob");
            // return false; // Prevent page refresh
 
-        }
+        //}
          var   sound = document.getElementsByTagName('audio'),
                music = sound[0],
            muteAudio = function(){
