--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -35,8 +35,11 @@
         }
         iframe{
             width: 500px; 
-            margin-bottom: 40px;
+            /*margin-bottom: 40px;*/
             border:#ff4d00;
+            margin-bottom: -50px;
+            margin-top: -40px;
+            height: 25vh;
         }
         table{
             width: 100%;
@@ -66,45 +69,74 @@
       </style>
    </head>
    <body>
-      <div class= "container">
+      <div class= "container-portfolio">
       <div class="background">
          
          <img src="images/rocks.png" width= "100%">
       </div>
       <div class="content">
          <div class="mediaContainer">
-            <div class="media">
+             <!--<div class="media">
                <img src="images/facebook.png">
-            </div>
-            <div class="media">
+            </div>-->
+            <!--<div class="media">
                <img src="images/twitter.png">
-            </div>
-            <div class="media">
+            </div>-->
+            <!--<div class="media">
                <img src="images/instagram.png">
+            </div>-->
+             <div class="media">
+               <a href="https://www.linkedin.com/in/franklinlema/"> 
+                  <img src="images/linkedin.png">
+               </a>
             </div>
-            <div class="media">
-               <img src="images/linkedin.png">
-            </div>
-            <div class="media">
-               <img src="images/git.png">
+             <div class="media">
+               <a href="https://github.com/flema1"> 
+                  <img src="images/git.png">
+               </a>
             </div>
          </div>
          <div class="description">
        
          <div class="clearfix">
-                 <a href="https://en-vision.herokuapp.com/">enVision App</a>
-                 <iframe src="https://en-vision.herokuapp.com/"></iframe>
-                 <a href="https://flema1.github.io/newEraMA/">New Era MA Site</a>
+                 <p class="main-description">
+                    <span class="link-span"><a href="https://en-vision.herokuapp.com/">enVision:</a>
+                    </span><p class="app-description">
+                    is a prototype for an accesibility application for the visually impaired.
+                    It takes a picture and audibly describes the the image's content. Image 
+                    descriptions can be saved, edited and modified for later use.
+                    </p>
+                 </p>
+                <iframe src="https://en-vision.herokuapp.com/"></iframe>
+                <p>
+                    <span class="stack-span">Stack:</span><p class="stack-description"> HTML, CSS, Javascript, 
+                        Jquery, Node.js, Express.js, PostgreSQL, Passport.js,
+                        Bcrypt.js, Clarifai Image recognitioon API, ResponsiveVoice.js
+                </p>
+
+                 <p class="main-description">
+                     <span class="link-span"> <a href="https://flema1.github.io/newEraMA/">New Era MA Site:</a>
+                    </span><p class="app-description">
+                    is a business website sample for a martial arts academy. Users can view classes scheduled by day,
+                    purchase apparel and access a peronalized profile with chat capacity.   
+                    </p>
+                 </p>
                  <iframe src="https://flema1.github.io/newEraMA/"></iframe>
-                 <a href="https://obscure-escarpment-46521.herokuapp.com/">News Press</a>
+                 <p>
+                    <span class="stack-span">Stack:</span><p class="stack-description"> HTML, CSS, Javascript, Jquery
+                </p>
+                 <p class="main-description">
+                     <span class="link-span"> <a href="https://obscure-escarpment-46521.herokuapp.com/">News Press</a>
+                    </span><p class="app-description">
+                    is a news appplication with sign in capability. Users can view top headlines from defualt news sources 
+                    or customize their homepage after signing in.    
+                    </p>
+                </p>
                  <iframe src="https://obscure-escarpment-46521.herokuapp.com/"></iframe>
-                 <a href="https://en-vision.herokuapp.com/">enVision App</a>
-                 <iframe src="https://en-vision.herokuapp.com/"></iframe>
-                 <a href="https://flema1.github.io/newEraMA/">New Era MA Site</a>
-                 <iframe src="https://flema1.github.io/newEraMA/"></iframe>
-                 <a href="https://obscure-escarpment-46521.herokuapp.com/">News Press</a>
-                 <iframe src="https://obscure-escarpment-46521.herokuapp.com/"></iframe>
-             </div>
+                  <p>
+                    <span class="stack-span">Stack:</span><p class="stack-description"> HTML, CSS, Javascript, React.js, Express.js, PostgreSQL,  Passport.js, Bcrypt.js
+                </p>
+                 </div>
 
          </div>
       </div>
