--- a/public/contact.html
+++ b/public/contact.html
@@ -74,20 +74,24 @@
       </div>
       <div class="content">
          <div class="mediaContainer">
-            <div class="media">
+            <!--<div class="media">
                <img src="images/facebook.png">
-            </div>
-            <div class="media">
+            </div>-->
+            <!--<div class="media">
                <img src="images/twitter.png">
-            </div>
-            <div class="media">
+            </div>-->
+            <!--<div class="media">
                <img src="images/instagram.png">
-            </div>
+            </div>-->
+             <div class="media">
+               <a href="https://www.linkedin.com/in/franklinlema/"> 
+                  <img src="images/linkedin.png">
+               </a>
+            </div> 
             <div class="media">
-               <img src="images/linkedin.png">
-            </div>
-            <div class="media">
-               <img src="images/git.png">
+               <a href="https://github.com/flema1"> 
+                  <img src="images/git.png">
+               </a>
             </div>
          </div>
          <div id="form-container" class="description">
