fixed typo in project descriptions

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -100,7 +100,7 @@
        
          <div class="clearfix">
                  <p class="main-description">
-                    <span class="link-span"><a href="https://en-vision.herokuapp.com/">enVision:</a>
+                    <span class="link-span"><a href="https://en-vision.herokuapp.com/">enVision </a>
                     </span><p class="app-description">
                     is a prototype for an accesibility application for the visually impaired.
                     It takes a picture and audibly describes the the image's content. Image 
@@ -115,7 +115,7 @@
                 </p>
 
                  <p class="main-description">
-                     <span class="link-span"> <a href="https://flema1.github.io/newEraMA/">New Era MA Site:</a>
+                     <span class="link-span"> <a href="https://flema1.github.io/newEraMA/">New Era MA </a>
                     </span><p class="app-description">
                     is a business website sample for a martial arts academy. Users can view classes scheduled by day,
                     purchase apparel and access a peronalized profile with chat capacity.   
