--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,7 @@
   <div>
 <!-- below code for pdf/modal-->
  <div class="resume">
-         <embed src="images/franklin2.pdf" width="100%" height="600" type='application/pdf'>
+         <embed src="images/lema_franklin_resume.pdf" width="100%" height="600" type='application/pdf'>
          </div>
             <a href="#close" title="Close" class="close">
               <input type="Button"  value="Exit">
